--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -5,15 +5,15 @@ on:
     branches: [ "main" ]
   pull_request:
     branches: [ "main" ]
+  workflow_dispatch: # Allows manual trigger from the GitHub Actions interface
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
 
     steps:
     - uses: actions/checkout@v4
-    - name: set up JDK 11
+    - name: Set up JDK 11
       uses: actions/setup-java@v4
       with:
         java-version: '11'
@@ -22,5 +22,16 @@ jobs:
 
     - name: Grant execute permission for gradlew
       run: chmod +x gradlew
+
     - name: Build with Gradle
-      run: ./gradlew build
+      run: |
+        ./gradlew assembleDebug
+        ./gradlew assembleRelease
+
+    - name: Archive APKs
+      uses: actions/upload-artifact@v3
+      with:
+        name: apk-files
+        path: |
+          app/build/outputs/apk/debug/app-debug.apk
+          app/build/outputs/apk/release/app-release.apk
