--- a/.github/workflow/android.yml
+++ b/.github/workflow/android.yml
@@ -4,7 +4,7 @@ on:
   pull_request:
     branches-ignore:
       - 'l10n_v3_openjdk2'
-    types: [ opened, reopened ]
+    types: [opened, reopened]
   push:
     branches-ignore:
       - 'l10n_v3_openjdk2'
@@ -74,23 +74,7 @@ jobs:
           distribution: 'temurin'
           java-version: '17'
 
-      # Remove or comment out these steps if not needed
-      # - name: Build Google Play .aab
-      #   if: github.repository_owner == 'PojavLauncherTeam' && github.ref_name == 'v3_openjdk'
-      #   run: |
-      #     gradle :app_pojavlauncher:bundleGplay
-      #     mv app_pojavlauncher/build/outputs/bundle/gplay/app_pojavlauncher-gplay.aab out/app-gplay.aab
-
-      # - name: Upload onto the Google Play testing track
-      #   continue-on-error: true
-      #   if: github.repository_owner == 'PojavLauncherTeam' && github.ref_name == 'v3_openjdk'
-      #   uses: r0adkll/upload-google-play@v1.1.2
-      #   with:
-      #     serviceAccountJsonPlainText: ${{ secrets.GPLAY_SERVICE_JSON }}
-      #     packageName: net.kdt.pojavlaunch
-      #     releaseFiles: out/app-gplay.aab
-      #     track: internal
-      #     inAppUpdatePriority: 5
+      # Removed Google Play related steps
 
       - name: Build Debug .apk
         run: |
@@ -116,13 +100,6 @@ jobs:
         with:
           name: app-debug
           path: out/app-debug.*
-
-      # Remove or comment out this step if not needed
-      # - name: Upload AAB
-      #   uses: actions/upload-artifact@v3
-      #   with:
-      #     name: app-release-aab
-      #     path: out/app-gplay.aab
 
       - name: Upload APK (without runtime)
         uses: actions/upload-artifact@v3
