--- a/.github/workflow/android.yml
+++ b/.github/workflow/android.yml
@@ -1,4 +1,4 @@
-name: Build Debug
+name: Android CI
 
 on:
   push:
@@ -22,6 +22,13 @@ jobs:
         java-version: '17'
         distribution: 'adopt'
 
+    - name: Set up Android SDK
+      uses: reactivecircus/android-emulator-runner@v3
+      with:
+        api-level: 33
+        target: google_apis
+        arch: x86_64
+
     - name: Cache Gradle packages
       uses: actions/cache@v3
       with:
@@ -32,6 +39,8 @@ jobs:
 
     - name: Build with Gradle
       run: ./gradlew assembleDebug
+      env:
+        GRADLE_OPTS: "-Dorg.gradle.jvmargs=-Xmx2048m -Dorg.gradle.daemon=false"
 
     - name: Archive Debug Build
       uses: actions/upload-artifact@v3
