--- a/build.gradle
+++ b/build.gradle
@@ -12,8 +12,6 @@ buildscript {
 
 allprojects {
     repositories {
-        google()
-        mavenCentral()
-        maven { url "https://jitpack.io" }
+        // No repositories defined here
     }
 }
