--- a/build.gradle
+++ b/build.gradle
@@ -2,28 +2,42 @@
 
 buildscript {
     repositories {
-        google()  // Google repository for Android dependencies
-        mavenCentral()  // Maven Central for additional dependencies
+        mavenCentral()
+        google()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:7.0.4'  // Android Gradle plugin
+        classpath 'com.android.tools.build:gradle:7.0.4'
     }
 }
 
+apply plugin: 'com.android.application'
+
+android {
+    compileSdkVersion 31 // ya latest version
+    defaultConfig {
+        applicationId "com.example.pojavlauncher"
+        minSdkVersion 21 // Minimum Android version
+        targetSdkVersion 31
+        versionCode 1
+        versionName "1.0"
+    }
+    buildTypes {
+        release {
+            minifyEnabled false
+            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+        }
+    }
+}
+
+dependencies {
+    implementation 'com.android.support:appcompat-v7:31.0.0'
+    implementation 'com.google.code.gson:gson:2.8.8' // Example dependency
+}
+
+// Configure repositories
 allprojects {
     repositories {
-        // No need to redefine repositories here since they are defined in settings.gradle
-    }
-}
-
-// Prevent deprecated Gradle features from being used
-tasks.withType(JavaCompile) {
-    options.compilerArgs << "-Xlint:deprecation"
-}
-
-// Optional: Enable the use of a Java toolchain
-java {
-    toolchain {
-        languageVersion.set(JavaLanguageVersion.of(17))  // Specify Java version (update as needed)
+        mavenCentral()
+        google()
     }
 }
