--- a/build.gradle
+++ b/build.gradle
@@ -1,43 +1,18 @@
-// Top-level build file where you can add configuration options common to all sub-projects/modules.
-
 buildscript {
     repositories {
-        mavenCentral()
         google()
+        mavenCentral()
+        maven { url "https://jitpack.io" } // Additional repository
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:7.0.4'
     }
 }
 
-apply plugin: 'com.android.application'
-
-android {
-    compileSdkVersion 31 // ya latest version
-    defaultConfig {
-        applicationId "com.example.pojavlauncher"
-        minSdkVersion 21 // Minimum Android version
-        targetSdkVersion 31
-        versionCode 1
-        versionName "1.0"
-    }
-    buildTypes {
-        release {
-            minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
-        }
-    }
-}
-
-dependencies {
-    implementation 'com.android.support:appcompat-v7:31.0.0'
-    implementation 'com.google.code.gson:gson:2.8.8' // Example dependency
-}
-
-// Configure repositories
 allprojects {
     repositories {
-        mavenCentral()
         google()
+        mavenCentral()
+        maven { url "https://jitpack.io" } // Same additional repository
     }
 }
