--- a/settings.gradle
+++ b/settings.gradle
@@ -2,6 +2,8 @@ pluginManagement {
     repositories {
         gradlePluginPortal()
         google()
+        mavenCentral()
+        maven { url "https://jitpack.io" } // Same additional repository
     }
 }
 
@@ -10,13 +12,12 @@ dependencyResolutionManagement {
     repositories {
         google()
         mavenCentral()
-        maven { url "https://jitpack.io" }
+        maven { url "https://jitpack.io" } // Same additional repository
     }
 }
 
-rootProject.name='PojavLauncher'
+rootProject.name = 'PojavLauncher'
 include ':jre_lwjgl3glfw'
 include ':app_pojavlauncher'
-
 include ':arc_dns_injector'
 include ':forge_installer'
