--- a/settings.gradle
+++ b/settings.gradle
@@ -2,22 +2,21 @@ pluginManagement {
     repositories {
         gradlePluginPortal()
         google()
-        mavenCentral()
-        maven { url "https://jitpack.io" } // Same additional repository
     }
 }
 
 dependencyResolutionManagement {
-    repositoriesMode.set(RepositoriesMode.PREFER_SETTINGS)
+    repositoriesMode.set(RepositoriesMode.FAIL_ON_PROJECT_REPOS)
     repositories {
         google()
         mavenCentral()
-        maven { url "https://jitpack.io" } // Same additional repository
+        maven { url "https://jitpack.io" }
     }
 }
 
-rootProject.name = 'PojavLauncher'
+rootProject.name='PojavLauncher'
 include ':jre_lwjgl3glfw'
 include ':app_pojavlauncher'
+
 include ':arc_dns_injector'
 include ':forge_installer'
