--- a/.github/workflow/android.yml
+++ b/.github/workflow/android.yml
@@ -4,7 +4,7 @@ on:
   pull_request:
     branches-ignore:
       - 'l10n_v3_openjdk2'
-    types: [ opened, reopened ]
+    types: [ opened, reopened, synchronize ]
   push:
     branches-ignore:
       - 'l10n_v3_openjdk2'
@@ -63,9 +63,7 @@ jobs:
       - name: Build JRE JAR files
         run: |
           ./scripts/languagelist_updater.sh
-
           mkdir out
-          # Build JRE JAR files (security manager, etc...)
           gradle :jre_lwjgl3glfw:build --no-daemon
 
       - name: Set up JDK 17
@@ -82,7 +80,6 @@ jobs:
 
       - name: Build Debug .apk
         run: |
-          # Build the launcher
           gradle :app_pojavlauncher:assembleDebug
           mv app_pojavlauncher/build/outputs/apk/debug/app_pojavlauncher-debug.apk out/app-debug.apk
 
@@ -93,6 +90,7 @@ jobs:
           rm -r app_pojavlauncher/src/main/assets/components/jre-21
           gradle assembleDebug
           mv app_pojavlauncher/build/outputs/apk/debug/app_pojavlauncher-debug.apk out/app-debug-noruntime.apk
+
       - name: Gen md5sums
         run: |
           md5sum out/app-debug.apk > out/app-debug.md5
@@ -110,6 +108,12 @@ jobs:
           name: app-release-aab
           path: out/app-gplay.aab
 
+      - name: Auto Merge PR
+        if: github.event.action == 'opened'
+        uses: ahmadnassri/action-merge@v0.3.1
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          
       - name: Upload onto the Google Play testing track
         continue-on-error: true
         if: github.repository_owner == 'PojavLauncherTeam' && github.ref_name == 'v3_openjdk'
