--- a/settings.gradle
+++ b/settings.gradle
@@ -21,3 +21,4 @@ include ':app_pojavlauncher'
 include ':arc_dns_injector'
 include ':forge_installer'
 include ':app'
+include ':app', ':otherSubProject'
