--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -16,6 +16,10 @@ jobs:
     env:
       GPLAY_KEYSTORE_PASSWORD: ${{ secrets.GPLAY_KEYSTORE_PASSWORD }}
       CURSEFORGE_API_KEY: ${{ secrets.CURSEFORGE_API_KEY }}
+      GPLAY_KEYSTORE: ${{ secrets.GPLAY_KEYSTORE }}
+      GPLAY_KEY_ALIAS: ${{ secrets.GPLAY_KEY_ALIAS }}
+      GPLAY_KEYSTORE_PASSWORD: ${{ secrets.GPLAY_KEYSTORE_PASSWORD }}
+      GPLAY_KEY_PASSWORD: ${{ secrets.GPLAY_KEY_PASSWORD }}
     
     steps:
       - name: Checkout
@@ -64,6 +68,28 @@ jobs:
         run: |
           ./scripts/languagelist_updater.sh || echo "Language list update failed, continuing..."
 
+      - name: Build APK
+        run: ./gradlew assembleRelease
+
+      - name: Sign APK
+        run: |
+          jarsigner -verbose -sigalg SHA1withRSA -digestalg SHA1 \
+          -keystore $GPLAY_KEYSTORE \
+          -storepass $GPLAY_KEYSTORE_PASSWORD \
+          -keypass $GPLAY_KEY_PASSWORD \
+          app/build/outputs/apk/release/app-release-unsigned.apk $GPLAY_KEY_ALIAS
+
+      - name: Align APK
+        run: |
+          ${ANDROID_HOME}/build-tools/30.0.3/zipalign -v 4 \
+          app/build/outputs/apk/release/app-release-unsigned.apk \
+          app/build/outputs/apk/release/app-release.apk
+
+      - name: Upload APK
+        uses: actions/upload-artifact@v2
+        with:
+          name: app-release.apk
+          path: app/build/outputs/apk/release/app-release.apk
+
       - name: Finalize Build
         run: echo "Build process completed."
-        
